2002-10-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_type.c: Add _register_fundamental_gtype_to_klass()/
	_register_fundamental_klass_to_gtype().

2002-10-02  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib.h: define LONG2NUM and ULONG2NUM unless already defined.

2002-09-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgutil.[ch]: File added.
	* src/rbgobject.h, src/rbglib.[ch]: Support rbgutil.c.

2002-09-29  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_param.c (inspect): change format: including value type and
	owner type. excluding nick and blurb.
	* src/rbgobj_param.c (get_nick, get_blurb): return nil if the string
	is NULL.
	* src/rbgobj_signal.c: introduce GLIb::Signal::Query to wrap
	GSignalQuery.
	* src/rbgobj_type.c: define GLib::Interface and include it to each
	interface. This inclusion is intended to represent that interfaces
	are subtypes of GLib::Inteface.
	* src/rbgobj_object.c (gobj_s_find_property, gobj_set_property,
	gobj_get_property): accept Symbol as property name.
	* src/rbgobj_object.c: fix parameter number of GLib::Object.find_property

2002-09-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_closure.c, src/rbgobj_boxed.c, src/rbgobject.h:
	Change RVAL2BOXED(obj) to RVAL2BOXED(obj, gtype).

2002-09-25  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_closure.c (marker_remove): fix a bug which can cause
	segmentation fault on following rb_gc_mark().

2002-09-24  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c: allow GLib::Object#freeze_notify to take block.
	* src/rbgobj_param.c (rbgobj_get_value_from_param_spec): fixed
	* src/rbgobj_param.c: implement GLib::ParamSpec#inspect
	* src/rbgobj_object.c: implement GLib::Object.list_properties and
	GLib::Object.find_property
	* src/rbgobj_signal.c: implement signal_handler_is_connected?
	* src/*.c: untabify
	* src/rbgobj_boxed.c (boxed_free): don't call g_boxed_free() if not
	initilized.