@@ -1,3 +1,7 @@
+2002-10-02  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* src/rbgobj_boxed: implement GLib::Boxed::gtype & GLib::Boxed#gtype
+
 2002-10-02  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgobj_type.c: Add _register_fundamental_gtype_to_klass()/
